# ttt

./: .gitignore  CHANGELOG.md  README.md  app.py  count_test.py  database_config.py  playground.py  pyproject.toml  requirements.txt  schedule_test.py  tox.ini  ttt.db  ttt_backup.sh  utils.py
.github/workflows/: blank.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: c71322ff11fc_init_schema.py
backend/app/: __main__.py  _version.py  config.py  main.py
backend/app/models/: create.py
backend/app/routes/: __init__.py  leaderboard.py  score.py  tournament.py
backend/app/schemas/: orm.py
backend/app/services/: db.py  utils.py
backend/tests/: conftest.py  test_db.py  test_models.py
docker/: .dockerignore  backend.Dockerfile  compose.yml  frontend.Dockerfile  nginx.conf
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: LeaderboardTable.tsx  MatchCard.tsx  PlayerCard.tsx  RoundCard.tsx  ScoreForm.tsx  TeamCard.tsx  TournamentCard.tsx  TournamentsList.tsx
frontend/src/containers/: LeaderboardContainer.tsx  ScoreContainer.tsx  TournamentContainer.tsx  TournamentsContainer.tsx
frontend/src/types/: types.ts
scripts/: ttt_backup.sh
src/ttt/: app.py  database_config.py  db.py  models.py  orm.py  schemas.py  schemas1.py  trying.py
src/ttt/models/: __init__.py  create.py  modify.py  read.py
src/ttt/schemas/: orm.py
src/ttt/templates/: base.html  leaderboard.html  match.html  round.html  tournament.html  tournaments.html
templates/: _base.html  _match.html  _round.html  _tournament.html  _tournaments.html  base.html  index.html  result.html  rules.html  schedule.html  standings.html
tests/: conftest.py  count_test.py  playground.py  schedule_test.py  test_db.py  test_models.py  test_render.py  test_templates.py
